# trading-bot

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  docker-compose.yml
src/: main.cpp
src/core/: spsc_ring.hpp
src/core/orderbook/: orderbook.hpp  orderbook_impl.hpp
src/delta_exchange/: client.hpp
src/delta_exchange/sessions/: l2.hpp  ticker.hpp
src/feed/: client.hpp  feed_types.hpp
src/feed/models/: product.hpp
src/feed/sessions/: l2.hpp  mark.hpp  ohlc.hpp  spot.hpp  types.hpp
src/market_state/: latency_stats.hpp  market_state.hpp  ohlc_ring.hpp  types.hpp
src/orderbook/: orderbook.hpp  orderbook_impl.hpp
src/parser/: delta_parser.cpp  delta_parser.hpp
src/transport/: session.hpp  types.hpp  wsclient.hpp
tests/: mock_client.hpp  test_l2_parsing.cpp  test_session.cpp  test_ws_parser.cpp
